alg1 and alg2 implemented, but need to be tested.